--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,4 @@
-@use 'base';
-@use 'layout';
-@use 'components';
-@use 'utils';
+@use "base";
+// @use "layout";
+// @use "components";
+// @use "utils";
